# RagArt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  ragart_cli.py  readme.md  requirements.txt  run.py  setup.py  skills-lock.json
config/: __init__.py  settings.py  settings_schema.py
docs/: ARCHITECTURE.md  eval-history.md
scripts/: run_eval.py
src/: __init__.py  document_loader.py  embeddings.py  exceptions.py  guard.py  llm_providers.py  observability.py  query_classifier.py  rag_system.py  text_utils.py  utils.py  workspaces.py
src/api/: __init__.py  errors.py  runtime.py  schemas.py
src/cache/: __init__.py  base.py  embedding_cache.py  response_cache.py  semantic_cache.py  sqlite_cache.py
src/context/: __init__.py  base.py  redundancy.py  reorder.py  token_budget.py
src/loaders/: __init__.py  base.py  docx_loader.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py
src/memory/: __init__.py  base.py  none.py  sliding_window.py  summary_buffer.py  vector_retrieval.py
src/pipeline/: __init__.py  base.py
src/prompt_strategies/: __init__.py  base.py  cot.py  custom.py  direct.py  few_shot.py  hyde.py  multi_query.py  query_rewrite.py  role_based.py  self_refine.py  step_back.py
src/retrievers/: __init__.py  base.py  dense.py  hybrid.py  reranker.py  sparse.py
src/services/: __init__.py  rag_registry.py
src/vector_stores/: __init__.py  base.py  (+2 more)
templates/: index.html
tests/: test_api_schemas.py  test_cache.py  test_context_engineering.py  test_document_loader.py  test_embeddings.py  test_eval_integration.py  test_eval_l1_rules.py  test_eval_l2_vector.py  test_eval_l3_lexical.py  test_eval_l4_judge.py  test_exceptions.py  test_fallback_safety.py  test_groq_provider.py  test_llm_providers.py  test_loaders.py  test_memory.py  test_observability.py  test_pipeline_base.py  test_pipeline_stages.py  test_prompt_strategies.py  test_rag_registry.py  test_rag_system.py  test_reindex_cache.py  test_reranker.py  test_retrievers.py  test_settings_config.py  test_settings_integration.py  test_settings_schema.py  test_source_endpoint.py  test_streaming.py  test_upload_multiformat.py  test_workspaces.py
(+50 files in other folders)
